# src/endpoints/addItemToCart.ts
@@ -1,26 +1,70 @@
 // src/endpoints/addItemToCart.ts
 import { Request } from '@cloudflare/itty-router-openapi';
 import { Item, ShoppingCart } from '../model/ShoppingCart';
+import { OpenAPIRoute, OpenAPIRouteSchema } from "@cloudflare/itty-router-openapi";
+import { AddItemRequest } from '../model/RequestTypes';
 
-export default async function addItemToCartHandler(req: Request) {
-	try {
-		const { userId, productId, name, price, quantity } = await req.json();
-
-		// Retrieve the existing cart from KV
-		const cartData = await CARTS.get(`cart-${userId}`);
-		if (!cartData) {
-			return new Response(JSON.stringify({ message: 'Cart not found' }), { status: 404 });
+export class AddItemToCartHandler extends OpenAPIRoute {
+	static schema: OpenAPIRouteSchema = {
+		tags: ["Cart"],
+		summary: "Add an item to cart. If there is no cart, it will create one.",
+		requestBody: AddItemRequest,
+		responses: {
+			"200": {
+				description: "Returns the updated cart",
+				schema: {
+					success: Boolean,
+					result: {
+						cart: ShoppingCart,
+					},
+				},
+			},
+			"400": {
+				description: "Invalid Request",
+				schema: {
+					success: Boolean,
+					error: String,
+				},
+			},
+			"404": {
+				description: "Cart Not Found",
+				schema: {
+					success: Boolean,
+					error: String,
+				},
+			},
+		},
+	};
+	
+	async handle( request: Request, env: any, context: any, data: Record<string, any>) {
+		// Retrieve the validated request body
+		const addItemRequest = data.body;
+		try {
+			const cartData = await env.CARTS.get(`cart-${addItemRequest.userId}`);
+			if (!cartData) {
+				return Response.json(
+					{ success: false, error: "Cart not found", },
+					{ status: 404, }
+				);
+			}
+			
+			const cart = new ShoppingCart();
+			cart.fromJSON(cartData);
+			const item = new Item(addItemRequest.productId, addItemRequest.name, addItemRequest.price, addItemRequest.quantity);
+			cart.addItem(item);
+			
+			await env.CARTS.put(`cart-${userId}`, cart.toJSON());
+			return {
+				success: true,
+				cart: cart.toJSON(),
+			};
+			
+		} catch (error) {
+			return  Response.json(
+				{ success: false, error: error.message, },
+				{ status: 400, }
+			);
 		}
-
-		const cart = new ShoppingCart();
-		cart.fromJSON(cartData);
-		const item = new Item(productId, name, price, quantity);
-		cart.addItem(item);
-
-		await CARTS.put(`cart-${userId}`, cart.toJSON());
-
-		return new Response(JSON.stringify({ message: 'Item added to cart', item }), { status: 200 });
-	} catch (error) {
-		return new Response(JSON.stringify({ message: 'Invalid request', error: error.message }), { status: 400 });
 	}
 }
+
