# src/endpoints/removeItemFromCart.ts
@@ -1,25 +1,61 @@
 // src/endpoints/removeItemFromCart.ts
 import { Request } from '@cloudflare/itty-router-openapi';
 import { ShoppingCart } from '../model/ShoppingCart';
+import { OpenAPIRoute, OpenAPIRouteSchema } from "@cloudflare/itty-router-openapi";
 
-export default async function removeItemFromCartHandler(req: Request) {
-	try {
-		const { userId, productId } = await req.json();
+export class RemoveItemFromCartHandler extends OpenAPIRoute {
+	static schema: OpenAPIRouteSchema = {
+		tags: ["Cart"],
+		summary: "Removes an item from cart.",
+		requestBody: RemoveItemRequest,
+		responses: {
+			"200": {
+				description: "Returns the updated cart. Item removed.",
+				schema: {
+					success: Boolean,
+					result: {
+						cart: ShoppingCart,
+					},
+				},
+			},
+			"400": {
+				description: "Invalid Request",
+				schema: {
+					success: Boolean,
+					error: String,
+				},
+			},
+			"404": {
+				description: "Cart Not Found",
+				schema: {
+					success: Boolean,
+					error: String,
+				},
+			},
+		},
+	};
 
-		// Retrieve the existing cart from KV
-		const cartData = await CARTS.get(`cart-${userId}`);
-		if (!cartData) {
-			return new Response(JSON.stringify({ message: 'Cart not found' }), { status: 404 });
+	async handle(request: Request, env: any, context: any, data: Record < string, any > ) {
+		// Retrieve the validated request body
+		const removeItemRequest = data.body;
+		try {
+			const cartData = await env.CARTS.get(`cart-${removeItemRequest.userId}`);
+			if (!cartData) {
+				return Response.json({ success: false, error: "Cart not found", }, { status: 404, });
+			}
+
+			const cart = new ShoppingCart();
+			cart.fromJSON(cartData);
+			cart.removeItem(removeItemRequest.productId);
+
+			await env.CARTS.put(`cart-${userId}`, cart.toJSON());
+			return {
+				success: true,
+				cart: cart.toJSON(),
+			};
+
+		} catch (error) {
+			return Response.json({ success: false, error: error.message, }, { status: 400, });
 		}
-
-		const cart = new ShoppingCart();
-		cart.fromJSON(cartData);
-		cart.removeItem(productId);
-
-		await CARTS.put(`cart-${userId}`, cart.toJSON());
-
-		return new Response(JSON.stringify({ message: 'Item removed from cart', productId }), { status: 200 });
-	} catch (error) {
-		return new Response(JSON.stringify({ message: 'Invalid request', error: error.message }), { status: 400 });
 	}
 }
